--- a/contact.html
+++ b/contact.html
@@ -1,33 +1,25 @@
-<!DOCTYPE html> 
-
+<!doctype html>
 <html lang="en">
-  <head> <meta charset="UTF-8">
-<meta name="description" content="Exceptional Realty Group, your real estate agent for buying, selling, and renting throughout New York City">
-<meta name="keywords" content="Exceptional Realty Group, real estate, houses, property">
-<meta name="author" content="Jon Grover">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
-<title>Exceptional Realty Group - Luxury Homes - About</title>
+<head>
+  <meta charset="UTF-8">
+  <title>Exceptional Realty Group - Luxury Homes - Contact</title>
 </head>
-
 <body>
 
   <h1>Exceptional</h1>
   <h2>Realty Group</h2>
-  <a href="index.html">About</a>
-  <a href="new-properties.html">New Properties</a>
-  <a href="real-estate-listings.html">Listings</a>
-  <a href="market-report.html">Market Report</a>
-  <a href="contact.html">Contact</a>
-  <a href="http://hud.gov" target='_blank'>H.U.D.</a>
- 
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-  </p>
-  <p>
-    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-  </p>
 
-</body>
+  <!-- links -->
+  <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+
+  <h3>Contact</h3>
+
+  <!-- Map -->
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24884.33201978732!2d-9.116920974218766!3d38.774218935418524!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd19318c8bd920f1%3A0x29f4b8fde74936a0!2sCASINO+LISBOA!5e0!3m2!1sen!2suk!4v1540898241095" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+ 
+<!-- Contact Form -->
+
+
   
+</body>
 </html>
