--- a/index.html
+++ b/index.html
@@ -24,5 +24,10 @@
       praesentium itaque voluptas esse ea accusamus, aliquid fuga ex! Possimus,
       enim?
     </p>
+    <video controls>
+  <source src="videos/real-estate.mp4" type="video/mp4">
+  <source src="videos/real-estate.ogv" type="video/ogg">
+  Your browser does not support HTML5 video.  <a href="https://browsehappy.com/" target="_blank">Please upgrade your browser</a>
+</video>
   </body>
 </html>
