--- a/index.html
+++ b/index.html
@@ -1,33 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
   </head>
   <body>
+<header>
     <h1>Exceptional</h1>
     <h2>Realty Group</h2>
-<a href="index.html">About</a>
-<a href="new-properties.html">New Properties</a>
-<a href="real-estate-listings.html">Listings</a>
-<a href="market-report.html">Market Report</a>
-<a href="contact.html">Contact</a>
-<a href="http://hud.gov" target='_blank'>H.U.D.</a>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui veritatis,
-      nesciunt! Iusto quod magni eaque. Magni quidem architecto sed nesciunt
-      veniam optio tenetur, totam debitis nemo quos iure obcaecati magnam.
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo excepturi
-      deleniti fugiat sapiente vitae ipsam saepe eum, tempore, labore
-      praesentium itaque voluptas esse ea accusamus, aliquid fuga ex! Possimus,
-      enim?
-    </p>
-    <video controls>
-  <source src="videos/real-estate.mp4" type="video/mp4">
-  <source src="videos/real-estate.ogv" type="video/ogg">
-  Your browser does not support HTML5 video.  <a href="https://browsehappy.com/" target="_blank">Please upgrade your browser</a>
-</video>
+    <nav>
+      <a href="index.html">About</a>
+      <a href="new-properties.html">New Properties</a>
+      <a href="real-estate-listings.html">Listings</a>
+      <a href="market-report.html">Market Report</a>
+      <a href="contact.html">Contact</a>
+      <a href="http://hud.gov" target="_blank">H.U.D.</a>
+  </nav>
+  </header>
+
+  <section id="featured-property">
+    <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
+
+    <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Quae, perferendis nisi nihil debitis aspernatur doloribus quam eveniet quibusdam tempora esse! Repudiandae, assumenda, debitis doloribus ea eius ab at quae totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, inventore aliquid ipsam debitis nulla vitae omnis nemo quisquam? Obcaecati dolor ipsum distinctio reprehenderit aliquid autem ea vel provident voluptas nisi.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
+  </section>
+
+  <section id="promotional">
+    <figure>
+      <video controls>
+        <source src="videos/real-estate.mp4" type="video/mp4">
+        <source src="videos/real-estate.ogv" type="video/ogg">
+        Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser</a>.
+      </video>
+      <figcaption>Exceptional Realty Group Promotional Video - Source: archive.org</figcaption>
+    </figure>
+  </section>
+
+    <footer>
+      &copy; 2014 Exceptional Realty Group. All Rights Reserved.
+    </footer>
+
   </body>
 </html>
